syntax = "proto3";

option java_multiple_files = true;
option java_package = "workshop.grpc.services.generated";
option java_outer_classname = "Protos";
option go_package = "proto";

import "google/protobuf/timestamp.proto";


service TransactionService {
    rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse);
}

message ListTransactionsRequest {

}

message ListTransactionsResponse {
    repeated Transaction transactions = 1;
}

message Transaction {
    string id = 1;
    double amount = 2;
    google.protobuf.Timestamp timestamp = 3;
}

